--- a/src/app/components/shopping-page/shopping-page.component.html
+++ b/src/app/components/shopping-page/shopping-page.component.html
@@ -1,27 +1,34 @@
-<div class="container">
+<div class="container" *ngIf="tab.length>0">
     <div class="example-container mat-elevation-z2">
-        <table mat-table [dataSource]="transactions">
+        <table mat-table [dataSource]="list" >
           <!-- Item Column -->
           <ng-container matColumnDef="item">
             <th mat-header-cell *matHeaderCellDef> Nom </th>
-            <td mat-cell *matCellDef="let transaction"> {{transaction.item}} </td>
+            <td mat-cell *matCellDef="let food"> {{food.name}} </td>
             <td mat-footer-cell *matFooterCellDef> Total </td>
           </ng-container>
       
           <!-- Cost Column -->
           <ng-container matColumnDef="cost">
             <th mat-header-cell *matHeaderCellDef> Prix </th>
-            <td mat-cell *matCellDef="let transaction"> {{transaction.cost | currency}} </td>
-            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+            <td mat-cell *matCellDef="let food"> {{food.price }} CFA </td>
+            <td mat-footer-cell *matFooterCellDef> {{getTotalCost() }} CFA </td>
+          </ng-container>
+        
+          <!-- Cost Column -->
+          <ng-container matColumnDef="number">
+            <th mat-header-cell *matHeaderCellDef> Nombre </th>
+            <td mat-cell *matCellDef="let food"> {{ food.numberOfItem }} </td>
+            <td mat-footer-cell *matFooterCellDef> {{ getNumberOfItem() }} </td>
           </ng-container>
 
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef class="action"> Action </th>
-            <td mat-cell *matCellDef="let transaction" class="action"> 
-                <span class="material-icons add" (click)="plusItem()"> add </span>
-                <span class="number-item"> 1 </span>
-                <span class="material-icons remove" (click)="removeOneItem()"> remove </span>
-                <span class="material-icons" (click)="removeItem()"> clear </span>
+            <td mat-cell *matCellDef="let food" class="action"> 
+                <!-- <span class="material-icons add" (click)="plusItem()"> add </span> -->
+                <!-- <span class="number-item"> {{ food.numberOfItem }} </span> -->
+               <!--  <span class="material-icons remove" (click)="removeOneItem()"> remove </span> -->
+                <span class="material-icons" (click)="removeItem(food)"> clear </span>
             </td>
             <td mat-footer-cell *matFooterCellDef>  </td>
           </ng-container>
@@ -36,5 +43,10 @@
     </div>
     <div class="checkout">
         <button mat-raised-button color="warn" (click)="checkout()" > Payer </button>
+    </div>
+</div>
+<div class="container" *ngIf="tab.length==0">
+    <div class="example-container mat-elevation-z2">
+      <h1 class="text-center">Votre panier est vide</h1>
     </div>
 </div>
