--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -40,52 +40,86 @@
                         alt="avatar mx-auto white" class="rounded-circle img-fluid">
         </div>
     </div>
-    <div class="offre">
-      <div ><h3 class="speciale">Offres spéciales</h3></div>
-      <div  class="fast-food row">
-          <div *ngFor="let item of specialFoods" class="col-md-3">
-              <div class="card">
-                  <div class="card-image">
-                    <img class="img-size" src= "{{ item.imagePath }}">
-                    <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
-                      <i class="material-icons">add_shopping_cart</i>
-                    </a>
-                  </div>
-                  <div class="card-content">
-                    <span class="card-title">{{ item.name }}</span>
-                    <div class="truncate " > {{ item.description }} </div>
-                  </div>
-                  <div class="card-action">
-                    <span class="left-align"><i>{{ item.restaurant }}</i></span>
-                    <span class="right-align">{{ item.price }} F</span>
-                  </div>
-              </div>
-          </div>  
-      </div>
+    
+    <div class="search-text">
+      <strong> Tapez le nom du plat</strong>
     </div>
-    <div class="offre">
-      <div><h3 class="burkinabe">Cuisine burkinabe</h3> </div>
-      <div class="fast-food row">
-        <div *ngFor="let item of burkinabeFoods" class="col-md-3">
-          <div class="card">
-              <div class="card-image">
-                <img class="img-size" src= "{{ item.imagePath }}">
-                <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
-                  <i class="material-icons">add_shopping_cart</i>
-                </a>
-              </div>
-              <div class="card-content">
-                <span class="card-title">{{ item.name }}</span>
-                <div class="truncate " > {{ item.description }} </div>
-              </div>
-              <div class="card-action">
-                <span class="left-align"><i>{{ item.restaurant }}</i></span>
-                <span class="right-align">{{ item.price }} F</span>
-              </div>
+    <div class="search-box row">
+      <div class="ng-autocomplete complete-box">
+        <ng-autocomplete
+          [data]="foods"
+          [(ngModel)]="searchText"
+          [searchKeyword]="keyword"
+          placeHolder="Enter the State Name"
+          historyIdentifier="states"
+          [itemTemplate]="itemTemplate"
+          (selected)='selectEvent($event)'
+          (inputChanged)='onChangeSearch($event)'
+          [notFoundTemplate]="notFoundTemplate">
+        </ng-autocomplete>
+        <mat-icon matPrefix class="search-icon">search</mat-icon>
+      
+        <ng-template #itemTemplate let-item>
+          <div class="item">
+            <span [innerHTML]="item.name"></span> &nbsp; | &nbsp;
+            <small>Chez: {{item.restaurant}}</small>
           </div>
-      </div>    
+        </ng-template>
+      
+        <ng-template #notFoundTemplate let-notFound>
+          <div [innerHTML]="notFound"></div>
+        </ng-template>
       </div>
     </div>
+    <div class="presentation">
+      <div class="offre">
+        <div ><h3 class="speciale">Offres spéciales</h3></div>
+        <div  class="fast-food row">
+            <div *ngFor="let item of specialFoods | foodFilter: searchText" class="col-md-3">
+                <div class="card">
+                    <div class="card-image">
+                      <img class="img-size" src= "{{ item.imagePath }}">
+                      <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
+                        <i class="material-icons">add_shopping_cart</i>
+                      </a>
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title">{{ item.name }}</span>
+                      <div class="truncate " > {{ item.description }} </div>
+                    </div>
+                    <div class="card-action">
+                      <span class="left-align"><i>{{ item.restaurant }}</i></span>
+                      <span class="right-align">{{ item.price }} F</span>
+                    </div>
+                </div>
+            </div>  
+        </div>
+      </div>
+      <div class="offre">
+        <div><h3 class="burkinabe">Cuisine burkinabe</h3> </div>
+        <div class="fast-food row">
+          <div *ngFor="let item of burkinabeFoods | foodFilter: searchText" class="col-md-3">
+            <div class="card">
+                <div class="card-image">
+                  <img class="img-size" src= "{{ item.imagePath }}">
+                  <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
+                    <i class="material-icons">add_shopping_cart</i>
+                  </a>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">{{ item.name }}</span>
+                  <div class="truncate " > {{ item.description }} </div>
+                </div>
+                <div class="card-action">
+                  <span class="left-align"><i>{{ item.restaurant }}</i></span>
+                  <span class="right-align">{{ item.price }} F</span>
+                </div>
+            </div>
+        </div>    
+        </div>
+      </div>
+    </div>
+  
     <div class="application">
       <div class="row">
         <div class="col-md-6">
