--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,45 +1,164 @@
-<div class="carde border-dark">
-    <img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="...">
-</div>
 <div class="container">
-    <div class="row category flex-row flex-nowrap">
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
+  <div class="row row-cotainer">
+
+    <div class="col-md-3 category flex-row flex-nowrap">
+        <div class="restaurant">
+            <button color="warn" class="btn-resto" mat-menu-item [matMenuTriggerFor]="vertebrates" >
+              Nos Rostaurants
+              <span class="material-icons arrow-resto">
+                arrow_right_alt
+              </span>
+            </button>
+            <mat-menu #vertebrates="matMenu" yPosition="above">
+              <button class="btn-item" mat-menu-item >Fishes</button>
+              <button class="btn-item" mat-menu-item >Amphibians</button>
+              <button class="btn-item" mat-menu-item >Reptiles</button>
+              <button class="btn-item" mat-menu-item>Birds</button>
+              <button class="btn-item" mat-menu-item>Mammals</button>
+            </mat-menu>
         </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.pratico-pratiques.com/app/uploads/sites/2/2019/04/23104327/poulet-barbecue-sur-canette-de-biere.jpg"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
         </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
         </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
         </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
-        </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
-        </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
-        </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
-        </div>
-        <div class="col-md-2 col-4 cat-img">
-            <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
-                        alt="avatar mx-auto white" class="rounded-circle img-fluid">
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
         </div>
     </div>
+    <div class="col-md-9">
+      <div class="carde border-dark">
+        <img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="...">
+      </div>
+    </div>
+   <!--  <div class="col-md-2 category flex-row flex-nowrap">
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-md-2 col-4 cat-img">
+            <div class="row justify-content-center">
+              <img src="https://cdn.vox-cdn.com/thumbor/Qu3Q4hfjjckujqLQ4eA7H03-3nk=/0x39:650x472/1200x800/filters:focal(0x39:650x472)/cdn.vox-cdn.com/assets/960660/Screen_Shot_2012-02-20_at_11.36.09_AM.png"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+              <span>category</span>
+            </div>
+          </div>
+
+        </div>
+    </div> -->
+  </div>
     
     <div class="search-text">
       <strong> Tapez le nom du plat</strong>
@@ -61,17 +180,17 @@
       
         <ng-template #itemTemplate let-item>
           <div class="item">
-            <span [innerHTML]="item.name"></span> &nbsp; | &nbsp;
+            <span [innerHTML]="item.name"></span> &nbsp;
             <small>Chez: {{item.restaurant}}</small>
           </div>
         </ng-template>
       
-        <ng-template #notFoundTemplate let-notFound>
-          <div [innerHTML]="notFound"></div>
+        <ng-template #notFoundTemplate >
+          <div> Aucun plat n'a été trouvé</div>
         </ng-template>
       </div>
     </div>
-    <div class="presentation">
+    <div class="presentation" *ngIf="searchText === ''" >
       <div class="offre">
         <div ><h3 class="speciale">Offres spéciales</h3></div>
         <div  class="fast-food row">
@@ -117,6 +236,28 @@
             </div>
         </div>    
         </div>
+      </div>
+    </div>
+    <div class="result">
+      <div  class="fast-food row" *ngIf="searchText !== ''" >
+        <div *ngFor="let item of foods | foodFilter: searchText" class="col-md-3">
+            <div class="card">
+                <div class="card-image">
+                  <img class="img-size" src= "{{ item.imagePath }}">
+                  <a class="btn-floating halfway-fab waves-effect waves-light red" (click)="openDialog(item)">
+                    <i class="material-icons">add_shopping_cart</i>
+                  </a>
+                </div>
+                <div class="card-content">
+                  <span class="card-title">{{ item.name }}</span>
+                  <div class="truncate " > {{ item.description }} </div>
+                </div>
+                <div class="card-action">
+                  <span class="left-align"><i>{{ item.restaurant }}</i></span>
+                  <span class="right-align">{{ item.price }} F</span>
+                </div>
+            </div>
+        </div>  
       </div>
     </div>
   
