--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,13 +1,93 @@
-@import 'home.component.css';
 img.card-img {
     max-height: 300px;
     background-size: 100% 100%;
     /* max-inline-size: 0%; */
 }
+.row-cotainer {
+    margin-top: 2%;
+}
+.btn-resto {
+    color: white;
+    background-color: #f44336;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    background-image: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent);
+    width: 83%;
+    border-radius: 10px;
+    justify-content: center;
+    margin-bottom: 7%;
+}
+.btn-resto:hover, .btn-resto:active {
+    color: white;
+    background-color: #f44336;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    background-image: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent);
+}
+.btn-item{
+    color: white;
+    background-color: #f44336;    /* color of the scroll thumb */
+          /* roundness of the scroll thumb */
+}
+.btn-item:hover, .btn-item:active {
+    color: white;
+    background-color: #f44336;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    background-image: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent);
+}
+.arrow-resto {
+    position: relative;
+    top: 6px;
+}
+.span-div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.category.flex-row.flex-nowrap {
+    height: 300px;
+    position: relative;
+    right: 4%;
+}
+
 .category {
     overflow-x: auto;
     white-space: nowrap;
 }
+.category::-webkit-scrollbar {
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  .category::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;      /* color of the tracking area */
+  }
+  .category::-webkit-scrollbar-thumb {
+    background-color: #f44336;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+    background-image: -webkit-linear-gradient(45deg,rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent)
+  }
 .left-align {
     float:left;
     color: red;
@@ -114,7 +194,7 @@ img.card-img {
     padding: 0;
   }
   :host ::ng-deep .autocomplete-container {
-    box-shadow: 0 1px 3px 0 red, 0 1px 1px 0 red, 0 2px 1px -1px red;
+    box-shadow: 0 1px 3px 0 #f44336, 0 1px 1px 0 #f44336, 0 2px 1px -1px #f44336;
     position: relative;
     overflow: visible;
     height: 40px;
@@ -133,4 +213,7 @@ strong {
 }
 .ng-autocomplete {
     width: 450px;
+}
+.img-fluid {
+    max-width: 50%; 
 }
