category and restaurant design ok

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,5 @@
 <div class="container">
   <div class="row row-cotainer">
-
     <div class="col-md-3 category flex-row flex-nowrap">
         <div class="restaurant">
             <button color="warn" class="btn-resto" mat-menu-item [matMenuTriggerFor]="vertebrates" >
@@ -16,6 +15,24 @@
               <button class="btn-item" mat-menu-item>Birds</button>
               <button class="btn-item" mat-menu-item>Mammals</button>
             </mat-menu>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.pratico-pratiques.com/app/uploads/sites/2/2019/04/23104327/poulet-barbecue-sur-canette-de-biere.jpg"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-6 col-4 cat-img justify-content-center">
+              <img src="https://cdn.pratico-pratiques.com/app/uploads/sites/2/2019/04/23104327/poulet-barbecue-sur-canette-de-biere.jpg"
+                          alt="avatar mx-auto white" class="rounded-circle img-fluid">
+            </div>
+            <div class="span-div">
+              <span>category</span>
+            </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-6 col-4 cat-img justify-content-center">
@@ -159,7 +176,6 @@
         </div>
     </div> -->
   </div>
-    
     <div class="search-text">
       <strong> Tapez le nom du plat</strong>
     </div>
