--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -274,6 +274,9 @@
                 </div>
             </div>
         </div>  
+        <div class="example-container mat-elevation-z2" *ngIf="foods?.length" >
+          <h1 class="text-center">Aucun plat n'est present pour cette categorie</h1>
+        </div>
       </div>
     </div>
   
