--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,7 +29,57 @@
     </div>
     <div class="col-md-8">
       <div class="carde border-dark">
-        <img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="...">
+        <mat-carousel
+          timings="250ms ease-in"
+          [autoplay]="true"
+          interval="3500"
+          color="warn"
+          maxWidth="auto"
+          proportion="49"
+          slides="3"
+          [loop]="true"
+          [hideArrows]="false"
+          [hideIndicators]="false"
+          [useKeyboard]="true"
+          [useMouseWheel]="false"
+          orientation="ltr"
+        >
+          <mat-carousel-slide
+            #matCarouselSlide
+            image='assets/images/miam2.jpeg'
+            overlayColor="#00000040"
+            [hideOverlay]="false"
+          >
+            <div
+              style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center"
+            >
+              <button
+                mat-flat-button
+                
+              >
+                Click me!
+              </button>
+            </div>
+          </mat-carousel-slide>
+          <mat-carousel-slide
+            #matCarouselSlide
+            image='assets/images/miam1.jpeg'
+            overlayColor="#00000040"
+            [hideOverlay]="false"
+          >
+            <div
+              style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center"
+            >
+              <button
+                mat-flat-button
+                
+              >
+                Click me!
+              </button>
+            </div>
+          </mat-carousel-slide>
+        </mat-carousel>
+        <!--<img src="https://i.ytimg.com/vi/8bXlyk0ITAE/maxresdefault.jpg" class="card-img" alt="..."> !-->
       </div>
     </div>
    <!--  <div class="col-md-2 category flex-row flex-nowrap">
@@ -212,7 +262,7 @@
     </div>
     <div class="result">
       <div  class="fast-food row" *ngIf="searchText !== ''" >
-        <div *ngFor="let item of foods | foodFilter: searchText" class="col-md-3">
+        <div  *ngFor="let item of foods | foodFilter: searchText as results" class="col-md-3">
             <div class="card">
                 <div class="card-image">
                   <img class="img-size" src= "{{ item.imagePath }}">
@@ -230,9 +280,9 @@
                 </div>
             </div>
         </div>  
-        <div class="example-container mat-elevation-z2" *ngIf="foods?.length" >
+        <!--<div class="example-container mat-elevation-z2" [hidden]="foods.length" >
           <h1 class="text-center">Aucun plat n'est present pour cette categorie</h1>
-        </div>
+        </div> !-->
       </div>
     </div>
   
